# erg-python

./: .gitignore  CMakeLists.txt  README.md  TODO  pyproject.toml  setup.cfg
.claude/: settings.local.json
cmparser/: __init__.py  cmerg.py  cminfofile.py
erg_python/: __init__.py  erg.py  erg_module.c  erg_python.pyd
include/: erg.h  erg_module.h  infofile.h  utils.h
src/: erg_module.c
test/: test_erg.py
test/results/: noarch.txt  x86-64-v2.txt  x86-64-v3.txt  x86-64-v4.txt  x86-64.txt
