[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erg-python"
version = "0.1.0"
description = "High-performance Python bindings for ERG (CarMaker binary results) file reader"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Yeonsoo Park", email = "yeonsoo.park@ipg-automotive.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
]
dependencies = [
    "numpy>=2.2.6",
]

[tool.setuptools]
packages = ["erg_python"]
include-package-data = true

[tool.setuptools.package-data]
erg_python = ["*.pyd", "*.so", "*.pyi", "py.typed"]

[tool.setuptools.exclude-package-data]
erg_python = []
